--- a/Sprint 3/checkout.html
+++ b/Sprint 3/checkout.html
@@ -10,6 +10,7 @@
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/298266a7e0.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/checkout.css">
     <title>Checkout Page</title>
@@ -17,64 +18,68 @@
 
 <body>
     <!-- header -->
-    <h1 class="text-center head m-4">Checkout Page</h1>
+    <div class="d-flex justify-content-center">
+        <a href="index.html" class="text-danger">
+            <h1 class="fa fa-solid fa-vihara text-center head m-4"> Checkout Page</h1>
+        </a>
+    </div>
     <!-- header -->
     <!-- icons starts here -->
-    <div class="icons">
-        <div class="row mr-0">
-            <div class="col-sm-6">
-                <h2 class="my-3 mx-5 bord shadow"><i class="fas fa-dollar-sign bg p-4 mr-4"></i>Cash on Delivery</h2>
+    <div class="icons p-3">
+        <div class="row">
+            <div class="col-md-6 text-center p-3">
+                <h2 class="my-3 bord shadow p-2"><i class="fas fa-dollar-sign bg p-4"></i>Cash on Delivery</h2>
             </div>
-            <div class="col-sm-6 ">
-                <h2 class="my-3 mx-5 bord shadow"><i class="fas fa-arrows-alt-h bg p-4 mr-4"></i>100% Return</h2>
+            <div class="col-md-6 text-center p-3">
+                <h2 class="my-3 bord shadow p-2"><i class="fas fa-arrows-alt-h bg p-4"></i>100% Return</h2>
             </div>
         </div>
 
-        <div class="row mr-0">
-            <div class="col-sm-6">
-                <h2 class="my-3 mx-5 bord shadow"><i class="far fa-thumbs-up bg p-4 mr-4"></i>Quality Assured</h2>
+        <div class="row">
+            <div class="col-md-6 text-center p-3">
+                <h2 class="my-3 bord shadow p-2"><i class="far fa-thumbs-up bg p-4"></i>Quality Assured</h2>
             </div>
-            <div class="col-sm-6 ">
-                <h2 class="my-3 mx-5 bord shadow"><i class="fas fa-stopwatch bg p-4 mr-4"></i>Delivery on time</h2>
+            <div class="col-md-6 text-center p-3">
+                <h2 class="my-3 bord shadow p-2"><i class="fas fa-stopwatch bg p-4"></i>Delivery on time</h2>
             </div>
         </div>
     </div>
     <!-- icons end here -->
     <!-- Checkout starts here -->
     <form class="form">
-        <div class="row bord p-5 shadow m-5">
-            <div class="col-sm-6">
-                <div class="mt-3 row">
-                    <h5 class="my-auto">First Name :</h5>
-                    <input class="ml-3 firstName input rounded p-2" type="text" placeholder="First Name" id="firstName" required />
-                    <p id="errorName">Enter a valid First Name.</p>
+        <div class="row bord p-2 shadow m-5 justify-content-center">
+            <div class="row col-12 col-lg-6 justify-content-center">
+                <div class="m-2 col-10 col-lg-12 row justify-content-center justify-content-lg-start">
+                    <h5 class="col-auto col-xl-3 my-auto">First Name:</h5>
+                    <input class="ml-3 firstName input rounded p-2" type="text" placeholder="First Name" id="firstName" required/>
+                    <p class="col-12 col-xl-4 text-center mx-0 my-auto" id="errorName">Enter a valid First Name.</p>
                 </div>
-                <div class="mt-3 row ">
-                    <h5 class="my-auto">Email :</h5>
-                    <input class="ml-3 input email rounded p-2" type="email" placeholder="Email" id="email" required />
-                    <p id="errorEmail">Enter a valid Email.</p>
+                <div class="m-2 col-10 col-lg-12 row justify-content-center justify-content-lg-start">
+                    <h5 class="col-auto col-xl-3 my-auto">Email:</h5>
+                    <input class="ml-3 input email rounded p-2" type="email" placeholder="Email" id="email" required/>
+                    <p class="col-12 col-xl-4 text-center mx-0 my-auto" id="errorEmail">Enter a valid Email.</p>
                 </div>
-                <div class="mt-3 row ">
-                    <h5 class="my-auto">Address :</h5>
-                    <input class="ml-3 input address rounded p-2" type="text" placeholder="Address" id="address" required />
-                    <p id="errorAddress">Enter a valid Address.</p>
+                <div class="m-2 col-10 col-lg-12 row justify-content-center justify-content-lg-start">
+                    <h5 class="col-auto col-xl-3 my-auto">Address:</h5>
+                    <input class="ml-3 input address rounded p-2" type="text" placeholder="Address" id="address" required/>
+                    <p class="col-12 col-xl-4 text-center mx-0 my-auto" id="errorAddress">Enter a valid Address.</p>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="mt-3 row">
-                    <h5 class="my-auto name my-auto">Last Name :</h5>
-                    <input class="ml-3 input lastName rounded p-2" type="text" placeholder="Last Name" id="lastName" required />
-                    <p id="errorLastName">Enter a valid Last Name.</p>
+            <div class="row col-12 col-lg-6 justify-content-center">
+                <div class="m-2 col-10 col-lg-12 row justify-content-center justify-content-lg-start">
+                    <h5 class="col-auto col-xl-3 my-auto name my-auto">Last Name:</h5>
+                    <input class="ml-3 input lastName rounded p-2" type="text" placeholder="Last Name" id="lastName" required/>
+                    <p class="col-12 col-xl-4 text-center mx-0 my-auto" id="errorLastName">Enter a valid Last Name.</p>
                 </div>
-                <div class="mt-3 row">
-                    <h5 class="my-auto my-auto">Password :</h5>
-                    <input class="ml-3 input password rounded p-2" title="(4-8 characters)" type="password" minlength="4" maxlength="8" placeholder="Password" id="password" required />
-                    <p id="errorPassword">Enter a correct password.</p>
+                <div class="m-2 col-10 col-lg-12 row justify-content-center justify-content-lg-start">
+                    <h5 class="col-auto col-xl-3 my-auto my-auto">Password:</h5>
+                    <input class="ml-3 input password rounded p-2" title="(4-8 characters)" type="password" minlength="4" maxlength="8" placeholder="Password" id="password" required/>
+                    <p class="col-12 col-xl-4 text-center mx-0 my-auto" id="errorPassword">Enter a correct password.</p>
                 </div>
-                <div class="mt-3 row">
-                    <h5 class="my-auto my-auto">Phone Number :</h5>
-                    <input class="ml-3 phone input rounded p-2" type="number" placeholder="Phone No." id="phone" required />
-                    <p id="errorPhone">Enter a valid phone number.</p>
+                <div class="m-2 col-10 col-lg-12 row align-middle justify-content-center justify-content-lg-start">
+                    <h5 class="col-auto col-xl-3 my-auto my-auto">Phone:</h5>
+                    <input class="ml-3 phone input rounded p-2" type="number" placeholder="Phone No." id="phone" required/>
+                    <p class="col-12 col-xl-4 text-center mx-0 my-auto" id="errorPhone">Enter a valid phone number.</p>
                 </div>
             </div>
         </div>
@@ -83,7 +88,7 @@
         <!-- Checkout ends here -->
         <!-- Buy button -->
         <div class="m-5 final text-right">
-            <button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()"><i
+            <button type="submit" id="btn" class="p-2 px-4 btn btn-warning shadow-lg" onclick="validate()"><i
                     class="fas fa-cart-arrow-down p-2"></i>Buy</button>
         </div>
     </form>
