--- a/Sprint 3/shop.html
+++ b/Sprint 3/shop.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/298266a7e0.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/shop.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,170 +16,180 @@
 </head>
 
 <body>
-
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md bg-secondary sticky-top">
-        <a class="navbar-brand text-white" href="index.html"><span><i class="fas fa-shopping-cart mr-2"></i></span>
-      <span>Volver</span> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand-md sticky-top bg-light justify-content-between">
+        <a class="navbar-brand text-white" href="index.html"><span><i class="fa fa-solid fa-vihara mr-2"></i></span>
+      <span>奇异果店</span></a>
+        <div id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white btn" id="cart" type="button" data-toggle="modal" data-target="#cartModal" onclick="cart()" href="#beauty"><i class="fas fa-cart-arrow-down"></i>
+                    <a class="nav-link text-white btn shadow-none" id="cart" type="button" data-toggle="modal" data-target="#cartModal" onclick="printCart()" href="#beauty"><i class="fas fa-cart-arrow-down"></i>
             My Cart</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <h1 class="text-center mt-3 m-5">Welcome to the ShopNow</h1>
-
-    <!-- Grocery part -->
-    <section>
-        <h2 class="text-center"><i class="fas fa-shopping-basket mr-2"></i>Grocery</h2>
-        <div id="grocery" class="row ml-3 m-5">
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">cooking oil</h5>
-                    <h1 class="card-text">$10.5</h1>
-                    <button type="button" onclick="addToCart(1)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Pasta</h5>
-                    <h1 class="card-text">$6.25</h1>
-                    <button type="button" onclick="addToCart(2)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Instant cupcake mixture</h5>
-                    <h1 class="card-text">$5</h1>
-                    <button type="button" onclick="addToCart(3)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- beauty part -->
-    <section>
-        <h2 class="text-center"><i class="fas fa-heart mr-2"></i>Beauty</h2>
-        <div id="beauty" class="row ml-3 m-5">
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">All-in-1</h5>
-                    <h1 class="card-text">$260</h1>
-                    <button type="button" onclick="addToCart(4)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Zero makeup kit</h5>
-                    <h1 class="card-text">$20.5</h1>
-                    <button type="button" onclick="addToCart(5)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Lip tints</h5>
-                    <h1 class="card-text">$12.75</h1>
-                    <button type="button" onclick="addToCart(6)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- clothes part -->
-    <section>
-        <h2 class="text-center"><i class="fas fa-tshirt mr-2"></i>Clothes</h2>
-        <div id="clothes" class="row ml-3 m-5">
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Lawn dress</h5>
-                    <h1 class="card-text">$15</h1>
-                    <button type="button" onclick="addToCart(7)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Lawn-chiffon combo</h5>
-                    <h1 class="card-text">$19.99</h1>
-                    <button type="button" onclick="addToCart(8)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-            <div class="card col-sm-3 m-1 ml-5 p-4" style="width: 18rem;">
-                <img src="./images/product.svg" class="grocery-img">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Toddler Frock</h5>
-                    <h1 class="card-text">$9.99</h1>
-                    <button type="button" onclick="addToCart(9)" class="btn btn-primary">Add to cart</button>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- modal -->
-    <aside>
-        <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="cartModalScrollableTitle"><i class="fas fa-cart-arrow-down"></i>My Cart</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+    <div id="shopBody" class="p-3 text-danger" id="sweets">
+        <header class="p-5 fw-bold">
+            <h1 class="text-center mb-3 display-3"><i class="fa fa-solid fa-vihara mr-2"></i> 奇异果店</h1>
+            <h2 class="text-center display-4">Welcome to Vihara Shop</h3>
+        </header>
+        <!-- Sweets part -->
+        <section class="row text-center justify-content-center m-4" style="min-height:300px">
+            <h2 class="text-center col-12"><i class="fas fa-ice-cream mr-2"></i>Sweets</h2>
+            <div id="grocery" class="row col-9 ml-3 m-5 justify-content-center">
+                <!--Nian Gao-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3 mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/nian-gao.jpg" alt="nian gao" />
                     </div>
-                    <div class="modal-body">
-                        <!-- listing items starts -->
-                        <div>
-                            <ul class="list">
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Nian Gao</h4>
+                        <p class="card-text text-white">$10</p>
+                        <button type="button" onclick="addToCart(1)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+                <!--Mochi-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3 mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/mochi.png" alt="mochi" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Mochi</h4>
+                        <p class="card-text text-white">$23</p>
+                        <button type="button" onclick="addToCart(2)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+                <!--Mitai-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3 mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/mixed-mitai.jpg" alt="mixed mitai" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Mixed Mitai</h4>
+                        <p class="card-text text-white">$10</p>
+                        <button type="button" onclick="addToCart(3)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                            </ul>
-                            <div>
-                                <h3 class="text-center bill px-5">Select Something</h3>
-                            </div>
-                            <div class="text-center">
-                                <a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
-                            </div>
+        <!-- Beauty part -->
+        <section class="row text-center justify-content-center m-4" style="min-height:300px" id="beauty">
+            <h2 class="text-center col-12"><i class="fas fa-heart mr-2"></i>Beauty</h2>
+            <div id="grocery" class="row col-9 ml-3 m-5 justify-content-center">
+                <!--Nian Gao-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3  mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/beauty-1.jpg" alt="nian gao" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Skin Care</h4>
+                        <p class="card-text text-white">$39</p>
+                        <button type="button" onclick="addToCart(4)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+                <!--Mochi-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3 mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/beauty-2.png" alt="serum" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Serum</h4>
+                        <p class="card-text text-white">$24</p>
+                        <button type="button" onclick="addToCart(5)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+                <!--Mitai-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3  mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/beauty-3.jpg" alt="mixed mitai" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Lipstick</h4>
+                        <p class="card-text text-white">$12</p>
+                        <button type="button" onclick="addToCart(6)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- clothes part -->
+        <section class="row text-center justify-content-center m-4" style="min-height:300px" id="clothes">
+            <h2 class="text-center col-12"><i class="fas fa-tag mr-2"></i>Clothing</h2>
+            <div id="grocery" class="row col-9 ml-3 m-5 justify-content-center">
+                <!--Kimono 1-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3  mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/kimono-1.jpg" alt="red kimono" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Red Kimono</h4>
+                        <p class="card-text text-white">$49</p>
+                        <button type="button" onclick="addToCart(7)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+                <!--Kimono 2-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3 mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/kimono-2.jpg" alt="blue kimono" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">Blue Kimono</h4>
+                        <p class="card-text text-white">$49</p>
+                        <button type="button" onclick="addToCart(8)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+                <!--Kimono 3-->
+                <div class="card p-0 col-10 col-md-5 col-lg-4 col-xl-3 mx-3 my-3 shadow red-background" style="width: 16rem">
+                    <div class="w-100 mx-auto p-0">
+                        <img class="w-100 h-auto p-0 m-0" src="images/kimono-3.jpg" alt="white kimono" />
+                    </div>
+                    <div class="card-body px-0 pb-0 p-3">
+                        <h4 class="card-title text-white">White Kimono</h4>
+                        <p class="card-text text-white">$49</p>
+                        <button type="button" onclick="addToCart(9)" class="btn m-2 btn btn-warning">Add to cart</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- modal -->
+        <aside class="text-white">
+            <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header shadow-none">
+                            <h5 class="modal-title" id="cartModalScrollableTitle"><i class="fas fa-cart-arrow-down mr-2"></i>Cart</h5>
+                            </button>
                         </div>
-                        <!-- listing items ends -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <div class="modal-body">
+                            <!-- listing items starts -->
+                            <div class="row justify-content-center">
+                                <h2>Your Cart:</h2>
+                                <ul class="col-10 list justify-content-between p-2" id="showCart" style='list-style-type: none'>
+                                </ul>
+                                <div class="text-center">
+                                    <p id="totalPrice"></p>
+                                    <a href="checkout.html" class="btn btn-warning m-3">Checkout</a>
+                                </div>
+                            </div>
+                            <!-- listing items ends -->
+                        </div>
+                        <div class="modal-footer justify-content-between">
+                            <button type="button" class="btn btn-light text-danger" onclick="cleanCart()">Empty Cart</button>
+                            <button type="button" class="btn btn-light text-danger border-0" data-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </aside>
+        </aside>
 
-    <!-- script tags -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <script src="js/shop.js"></script>
+        <!-- script tags -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+        <script src="js/shop.js"></script>
 </body>
 
 </html>
